--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,7 @@ $color-hover:#5FB848;
 
 $color-intro-text:#181D19;
 $color-bg-btn: linear-gradient(180deg, #64BB47 0%, #2C9553 100%);
-
+$color-bg-btn-black:  linear-gradient(180deg, #494949 0%, #494949 100%);
 
 $ff-PoppinsMedium: 'Poppins-Medium';
 $ff-SofiaProRegular: 'SofiaPro-Regular';
