--- a/scss/about/_about.scss
+++ b/scss/about/_about.scss
@@ -23,13 +23,13 @@
         }
         &--btn{
             @include font-style(24px, $ff-SofiaProRegular, $color-white);
-            background-color: $color-list;
+            background-image: $color-bg-btn;
             padding: 16px 41px;
             border-radius: 50px;
             margin-top: 68px;
             width: fit-content;
             &:hover{
-                background-image: $color-bg-btn;
+               background-image: $color-bg-btn-black;
             }
         }
     }
