--- a/scss/fresh-vegetables/_fresh-vegetables.scss
+++ b/scss/fresh-vegetables/_fresh-vegetables.scss
@@ -22,12 +22,12 @@
         }
         &--btn{
             @include font-style(24px, $ff-SofiaProRegular, $color-white);
-            background-color: $color-list;
+            background-image: $color-bg-btn;
             padding: 16px 41px;
             border-radius: 50px;
             margin-top: 40px;
             &:hover{
-                background-image: $color-bg-btn;
+                background-image: $color-bg-btn-black;
             }
         }
     }
